# iceberg-prototype

./: .gitignore  CLAUDE.md  LICENSE  README.md
agent_docs/: architecture.md  development-setup.md
docs/: notebook-vs-prototype.md  overview.md  project-overview.md  spec.md
docs/reference/: design-decisions.md  notebook-vs-prototype.md
docs/superpowers/specs/: 2026-03-26-billing-archive-prototype-design.md
prototype/: README.md  docker-compose.yml  pyproject.toml
prototype/benchmarks/: bench_memory.py  bench_read.py  bench_write.py
prototype/src/: billing_reader.py  lock.py  reader.py  record_types.py  schema.py  sidecar.py  snapshot_id.py  synthetic.py  writer.py
prototype/tests/: conftest.py  test_advanced.py  test_atomic_visibility.py  test_billing_reader.py  test_dst.py  test_reader.py  test_s3_reader.py  test_scale.py  test_schema.py  test_sidecar.py  test_snapshot_id.py  test_synthetic.py  test_write_read.py
