[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "billing-archive-prototype"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyiceberg[sql-catalog]>=0.8",
    "pyiceberg[pyiceberg-core]",
    "pyiceberg[sql-postgres]",
    "pyarrow>=17",
    "duckdb>=1.1",
    "pydantic>=2",
    "psycopg2-binary>=2.9",
    "memray>=1.13",
    "redis>=5",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-benchmark>=4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that use large data sets (run with -m slow for Phase 2 scale testing)",
]
